--- a/app/views/shared/template.jade
+++ b/app/views/shared/template.jade
@@ -13,7 +13,7 @@ html(class='no-js', lang='en')
     nav.top-bar
       ul.title-area
         li.name
-          h1: a(href="/") AirBnB - Node.js
+          h1: a(href="/") Civic311
         li.toggle-topbar.menu-icon
           a(href="#") Menu
 
@@ -22,9 +22,9 @@ html(class='no-js', lang='en')
         ul.right
           li: a(href="/") Home
           li.divider
-          li: a(href="/listings") Listings
+          li: a(href="/reports") Reports
           li.divider
-          li: a(href="/listings/new") New Listing
+          li: a(href="/reports/new") Submit Report
           li.divider
           li: a(href="/register") Register
           li.divider
