implement two factor auth --all tests passing

--- a/app/views/email/access.jade
+++ b/app/views/email/access.jade
@@ -1,6 +1,8 @@
 //h1(style="color:red; background-color:grey;")= subject
 h1= subject
 p Thank you, #{to}, for signing up with civic311.
+p Please complete your registraion with the following access token :
+h4 #{token}.
 
 small Your City
 
