--- a/app/views/employees/token.jade
+++ b/app/views/employees/token.jade
@@ -3,13 +3,14 @@ extends ../shared/template
 block content
   .row
     .small-12.columns
-      form(method='post', action='/admin/register')
+      form(method='post', action='/admin/confirm')
         fieldset
-          legend=title
-          label Name
-          input(type='text', name='name', required, autofocus=true)
+          legend= title
           label Email
           input(type='email', name='email', required)
           label Password
           input(type='password', name='password', required)
-          button.radius.small Request Token
+          label Employee Access Token
+          input(type='text', name='token', required)
+          button.radius.small Complete Registration
+
