--- a/app/views/home/index.jade
+++ b/app/views/home/index.jade
@@ -1,5 +1,6 @@
 extends ../shared/template
 
 block content
-  h1= title
+    h1 <i class="fa fa-flag"></i> Civic 311
+    h3 Citizen to Government collaboration made simple
 
