--- a/app/views/shared/template.jade
+++ b/app/views/shared/template.jade
@@ -8,12 +8,13 @@ html(class='no-js', lang='en')
     link(rel='stylesheet', href='/css/normalize.css')
     link(rel='stylesheet', href='/css/foundation.css')
     link(rel='stylesheet', href='/less/app.css')
+    link(href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet")
     script(src='/js/vendor/modernizr.js')
   body
     nav.top-bar
       ul.title-area
         li.name
-          h1: a(href="/") Civic311
+          h1: a(href="/") Civic 311
         li.toggle-topbar.menu-icon
           a(href="#") Menu
 
