test/implement lookups for residents & employees, then implement bounce

--- a/app/views/home/index.jade
+++ b/app/views/home/index.jade
@@ -4,3 +4,12 @@ block content
     h1 <i class="fa fa-flag"></i> Civic 311
     h3 Citizen to Government collaboration made simple
 
+    .row
+      #status
+        .panel
+          .small-10.columns
+            label What's my Status?
+            input(type='text', placeholder='Report Name')
+          .small-2.columns
+            button.medium.radius Submit
+          .clear
