--- a/app/less/app.less
+++ b/app/less/app.less
@@ -51,3 +51,12 @@ h3 {
   margin-top: 5px;
 }
 
+.clear {
+  clear: both;
+}
+
+.panel {
+  background: #fff !important;
+  border: 4px solid #3498db;
+  border-radius: 7px;
+}
