--- a/app/views/reports/fresh.jade
+++ b/app/views/reports/fresh.jade
@@ -20,6 +20,7 @@ block content
     br
     label Picture
     input(type='file', name='cover')
+    input(type='hidden', name='residentId')
     br
     button#create Submit Report
 
