--- a/app/views/reports/index.jade
+++ b/app/views/reports/index.jade
@@ -4,7 +4,7 @@ block content
   h1= title
   #map
 
-  button#search(style='display:none;') View Reports In Your Area
+  button.small.radius#search(style='display:none;') View Reports In Your Area
 
   script.
     var places = [];
