--- a/app/less/app.less
+++ b/app/less/app.less
@@ -34,6 +34,25 @@ h1, h3,  h4, p, button, a{
   border-right: solid 1px #bdc3c7;
 }
 
+.top-bar-section .has-form {
+  background: #2980b9 !important;
+}
+
+#search {
+  margin-top: 15px;
+}
+
+#map {
+  border-radius: 10px;
+}
+
+button.tiny {
+  margin-top: 4px;
+  color: #2980b9 !important;
+  background: #ecf0f1 !important;
+  font-weight: 600;
+}
+
 h1, h3 {
   font-family: 'Varela Round', sans-serif !important;
   font-size: 3.75rem;
@@ -59,4 +78,22 @@ h3 {
   background: #fff !important;
   border: 4px solid #3498db;
   border-radius: 7px;
+}
+
+////////// REPORT PAGE //////////
+
+.report-img {
+  background-size: cover;
+  width: 100%;
+  height: 350px;
+  border-radius: 10px;
+}
+
+#p {
+  font-size: 18px; 
+  color: #34495e;
+}
+
+#h4 {
+  color: #2980b9;
 }
