--- a/app/views/reports/show.jade
+++ b/app/views/reports/show.jade
@@ -4,7 +4,27 @@ block content
   h1= title
 
   if report.photo
-    img(src= report.photo) 
-  h4= report.name  
-  h4= moment(report.date).format('MMMM Do, YYYY')
-  h4= report.description
+    .report-img(style='background-image:url("' + report.photo + '")')
+
+  h4#h4 <i class="fa fa-flag"></i>&nbsp Report Name
+    p#p=     report.name
+  h4#h4 <i class="fa fa-calendar"></i>&nbsp Date
+    p#p=     moment(report.date).format('MMMM Do, YYYY')
+  h4#h4 <i class="fa fa-warning"></i>&nbsp Details
+    p#p=     report.description
+  h4#h4 <i class="fa fa-map-marker"></i>&nbsp Address
+    p#p=     report.address
+  h4#h4 <i class="fa fa-comment-o"></i>&nbsp Status
+    p#p=     report.currentStatus
+
+  if currentResident
+    form(action='/reports/' + report._id, method='post')
+      input(type='hidden', name='currentResident', value= currentResident._id)
+      button.alert.small.radius Subscribe to updates
+
+  if currentEmployee
+    form(action='/reports/' + report._id, method='post')
+      input(type='hidden', name='employeeId', value= currentEmployee._id)
+      label Status
+      textarea(name='currentStatus', required)
+      button.alert.small.radius Submit Status Update
