--- a/app/views/reports/show.jade
+++ b/app/views/reports/show.jade
@@ -7,18 +7,18 @@ block content
     .report-img(style='background-image:url("' + report.photo + '")')
 
   h4#h4 <i class="fa fa-flag"></i>&nbsp Report Name
-    p#p=     report.name
+    p#p= report.name
   h4#h4 <i class="fa fa-calendar"></i>&nbsp Date
-    p#p=     moment(report.date).format('MMMM Do, YYYY')
+    p#p= moment(report.date).format('MMMM Do, YYYY')
   h4#h4 <i class="fa fa-warning"></i>&nbsp Details
-    p#p=     report.description
+    p#p= report.description
   h4#h4 <i class="fa fa-map-marker"></i>&nbsp Address
-    p#p=     report.address
+    p#p= report.address
   h4#h4 <i class="fa fa-comment-o"></i>&nbsp Status
-    p#p=     report.currentStatus
+    p#p= report.currentStatus
 
   if currentResident
-    form(action='/reports/' + report._id, method='post')
+    form(action='/reports/subscribe/' + report._id, method='post')
       input(type='hidden', name='currentResident', value= currentResident._id)
       button.alert.small.radius Subscribe to updates
 
