send email with id when report created, add home page search by id bar

--- a/app/views/email/update.jade
+++ b/app/views/email/update.jade
@@ -1,7 +1,7 @@
 h1(style="color:#2980b9;")= subject
 h3 #{name},
-p The status of your report with Civic311 has been updated as follows:
-p #{currentStatus}
+h3 The status of your report with Civic 311 has been updated as follows:
+h4 #{currentStatus}
 
 small Your City
 
