--- a/app/views/email/welcome.jade
+++ b/app/views/email/welcome.jade
@@ -1,6 +1,5 @@
-//h1(style="color:red; background-color:grey;")= subject
-h1= subject
-p Thank you, #{to}, for signing up with civic311.
+h1(style="color:#2980b9;")= subject
+h4 Thank you, #{to}, for signing up with Civic 311.
 
 small Your City
 
