--- a/app/views/home/index.jade
+++ b/app/views/home/index.jade
@@ -9,7 +9,7 @@ block content
         .panel
           .small-10.columns
             label What's my Status?
-            input(type='text', placeholder='Report Name')
+            input(type='text', placeholder='Report Id')#id-val
           .small-2.columns
-            button.medium.radius Submit
+            button.medium.radius#id-status Submit
           .clear
