--- a/app/views/email/access.jade
+++ b/app/views/email/access.jade
@@ -1,8 +1,7 @@
-//h1(style="color:red; background-color:grey;")= subject
-h1= subject
-p Thank you, #{to}, for signing up with civic311.
-p Please complete your registraion with the following access token :
-h4 #{token}.
+h1(style="color:#2980b9;")= subject
+h4 Thank you, #{to}, for signing up with Civic 311.
+h4 Please complete your registraion with the following access token :
+h2 #{token}
 
 small Your City
 
