--- a/app/views/home/index.jade
+++ b/app/views/home/index.jade
@@ -6,10 +6,14 @@ block content
 
     .row
       #status
-        .panel
+        .panel#home-panel
           .small-10.columns
             label What's my Status?
             input(type='text', placeholder='Report Id')#id-val
           .small-2.columns
             button.medium.radius#id-status Submit
           .clear
+
+    .row
+      .small-12.columns#home-img
+
