--- a/app/less/app.less
+++ b/app/less/app.less
@@ -74,10 +74,14 @@ h3 {
   clear: both;
 }
 
-.panel {
+#home-panel {
   background: #fff !important;
   border: 4px solid #3498db;
   border-radius: 7px;
+  position: absolute !important;
+  z-index: 2;
+  width: 100%;
+  margin-top: 65px;
 }
 
 ////////// REPORT PAGE //////////
@@ -87,6 +91,17 @@ h3 {
   width: 100%;
   height: 350px;
   border-radius: 10px;
+}
+
+#home-img {
+  background-image: url(../img/City.jpg);
+  background-size: cover;
+  width: 100%;
+  height: 900px;
+  border-radius: 10px;
+  position: relative !important;
+  z-index: 1;
+  text-align: center;
 }
 
 #p {
