--- a/app/less/app.less
+++ b/app/less/app.less
@@ -76,12 +76,16 @@ h3 {
 
 #home-panel {
   background: #fff !important;
-  border: 4px solid #3498db;
+  border-right: 5px solid #3498db;
+  border-left: 5px solid #3498db;
+  border-top: 17px solid #3498db;
+  border-bottom: 17px solid #3498db;
   border-radius: 7px;
   position: absolute !important;
   z-index: 2;
   width: 100%;
-  margin-top: 65px;
+  margin-top: 50px;
+  background:rgba(255,255,255, 0.8) !important;
 }
 
 ////////// REPORT PAGE //////////
@@ -94,14 +98,16 @@ h3 {
 }
 
 #home-img {
-  background-image: url(../img/City.jpg);
+  background-image: url(../img/city2.jpg);
   background-size: cover;
   width: 100%;
-  height: 900px;
+  height: 550px;
   border-radius: 10px;
   position: relative !important;
   z-index: 1;
   text-align: center;
+  border: 4px solid #3498db;
+  margin-bottom: 35px;
 }
 
 #p {
