--- a/app/less/app.less
+++ b/app/less/app.less
@@ -97,6 +97,13 @@ h3 {
   border-radius: 10px;
 }
 
+i {
+  background-color: #fff;
+  padding: 11px;
+  border-radius: 100%;
+  border: 3px solid #2980b9;
+}
+
 #home-img {
   background-image: url(../img/city2.jpg);
   background-size: cover;
@@ -117,4 +124,17 @@ h3 {
 
 #h4 {
   color: #2980b9;
+}
+
+////////// FORMS //////////
+#forms {
+  border: 4px solid #008cba !important;
+  border-radius: 10px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  background-color: #fff;
+}
+
+#forms legend {
+  color: #3b476b;
 }
