--- a/app/views/employees/token.jade
+++ b/app/views/employees/token.jade
@@ -3,7 +3,7 @@ extends ../shared/template
 block content
   .row
     .small-12.columns
-      form(method='post', action='/admin/confirm')
+      form#forms(method='post', action='/admin/confirm')
         fieldset
           legend= title
           label Email
