--- a/app/views/residents/fresh.jade
+++ b/app/views/residents/fresh.jade
@@ -3,7 +3,7 @@ extends ../shared/template
 block content
   .row
     .small-12.columns
-      form(method='post', action='/register')
+      form#forms(method='post', action='/register')
         fieldset
           legend=title
           label Name
