add valid email for travis tests

--- a/app/views/reports/fresh.jade
+++ b/app/views/reports/fresh.jade
@@ -7,7 +7,7 @@ block content
     label Name
     input(type='text', name='name', required, autofocus='true')
     label Address
-    input(type='text', name='address', required)
+    input(type='text', name='address', required)#complete
     input(type='hidden', name='lat')
     input(type='hidden', name='lng')
     label Description
