clean up mailgun tests for travis and add map search autocomplete

--- a/app/views/reports/fresh.jade
+++ b/app/views/reports/fresh.jade
@@ -26,4 +26,6 @@ block content
 
 block scripts
   script(src='/js/source/new-report.js')
+  script(src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false")
+  script(src='/js/vendor/jquery.geocomplete.min.js')
 
