show email body on travis

--- a/app/views/email/id.jade
+++ b/app/views/email/id.jade
@@ -1,7 +1,4 @@
 h1(style="color:#2980b9;")= subject
-h3 #{name},
-h4 Thank you. Your report has been submitted with Civic 311. A city employee will respond to your issue shortly.
-h4 Please retain the following report id in order to track the status of you issue through our site.
-h2 #{id}
+h4 Thank you for signing up with Civic 311.
 
 small Your City
