remove welcome email

--- a/app/views/email/welcome.jade
+++ b/app/views/email/welcome.jade
@@ -1,5 +1,5 @@
-h1(style="color:red; background-color:#fff;")= subject
-p Thank you, #{to}, for signing up!
+h1(style="color:#2980b9;")= subject
+p Thank you, #{to}, for signing up with Civic 311!
 
-small The Management
+small Your City
 
