--- a/app/views/reports/fresh.jade
+++ b/app/views/reports/fresh.jade
@@ -7,7 +7,7 @@ block content
     label Name
     input(type='text', name='name', required, autofocus='true')
     label Address
-    input(type='text', name='address', required)#complete
+    input#complete(type='text', name='address', required)
     input(type='hidden', name='lat')
     input(type='hidden', name='lng')
     label Description
@@ -26,6 +26,6 @@ block content
 
 block scripts
   script(src='/js/source/new-report.js')
-  script(src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false")
-  script(src='/js/vendor/jquery.geocomplete.min.js')
+  //script(src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false")
+  //script(src='/js/vendor/jquery.geocomplete.min.js')
 
