--- a/app/views/shared/template.jade
+++ b/app/views/shared/template.jade
@@ -51,7 +51,8 @@ html(class='no-js', lang='en')
     script(src='/js/vendor/foundation.min.js')
     script(src='/js/vendor/lodash.js')
     script(src='/js/vendor/moment.js')
-    script(src='https://maps.googleapis.com/maps/api/js?key=AIzaSyAg7BExWsO3xkC80yWGVtWKCrA_eFr-M34&sensor=true')
     script(src='/js/source/main.js')
+    script(src='https://maps.googleapis.com/maps/api/js?key=AIzaSyAg7BExWsO3xkC80yWGVtWKCrA_eFr-M34&sensor=true&libraries=places')
+    script(src='/js/vendor/jquery.geocomplete.min.js')
     block scripts
 
