--- a/app/views/reports/fresh.jade
+++ b/app/views/reports/fresh.jade
@@ -22,7 +22,7 @@ block content
     input(type='file', name='cover')
     input(type='hidden', name='residentId')
     br
-    button#create Submit Report
+    button.small.radius#create Submit Report
 
 block scripts
   script(src='/js/source/new-report.js')
