--- a/app/views/shared/template.jade
+++ b/app/views/shared/template.jade
@@ -8,6 +8,7 @@ html(class='no-js', lang='en')
     link(rel='stylesheet', href='/css/normalize.css')
     link(rel='stylesheet', href='/css/foundation.css')
     link(rel='stylesheet', href='/less/app.css')
+    link(rel='stylesheet', href='/css/dropzone.css')
     link(href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet")
     script(src='/js/vendor/modernizr.js')
   body
@@ -54,5 +55,6 @@ html(class='no-js', lang='en')
     script(src='/js/source/main.js')
     script(src='https://maps.googleapis.com/maps/api/js?key=AIzaSyAg7BExWsO3xkC80yWGVtWKCrA_eFr-M34&sensor=true&libraries=places')
     script(src='/js/vendor/jquery.geocomplete.min.js')
+    //script(src='/js/vendor/dropzone.js')
     block scripts
 
