--- a/app/views/reports/show.jade
+++ b/app/views/reports/show.jade
@@ -6,15 +6,15 @@ block content
   if report.photo
     .report-img(style='background-image:url("' + report.photo + '")')
 
-  h4#h4 <i class='fa fa-flag'></i>&nbsp Report Name
+  h4#h4 <i class='fa fa-flag'></i>&nbsp; Report Name
     p#p= report.name
-  h4#h4 <i class='fa fa-calendar'></i>&nbsp Date
+  h4#h4 <i class='fa fa-calendar'></i>&nbsp; Date
     p#p= moment(report.date).format('MMMM Do, YYYY')
-  h4#h4 <i class='fa fa-warning'></i>&nbsp Details
+  h4#h4 <i class='fa fa-warning'></i>&nbsp; Details
     p#p= report.description
-  h4#h4 <i class='fa fa-map-marker'></i>&nbsp Address
+  h4#h4 <i class='fa fa-map-marker'></i>&nbsp; Address
     p#p= report.address
-  h4#h4 <i class='fa fa-comment-o'></i>&nbsp Status
+  h4#h4 <i class='fa fa-comment-o'></i>&nbsp; Status
     p#p= report.currentStatus
 
   if currentResident
@@ -22,21 +22,25 @@ block content
       input(type='hidden', name='currentResident', value= currentResident._id)
       button.alert.small.radius Subscribe to updates
 
-  if currentResident
-    select#donation
-      option Select a Donation
-      option $5.00
-      option $15.00
-      option $25.00
+  if report.donatable === true
+    h3 Donate to This Report
+      select#donation
+        option Select a Donation
+        option $5.00
+        option $15.00
+        option $25.00
+        option $50.00
+        option $75.00
+        option $100.00
 
-    form#donate(action='/reports/donate/' + report._id, method='post')
-      input(type='hidden', name="amount", value="#")
-      script(class='stripe-button',
-        data-key='pk_test_OQsSptYh5O6y7yY7Q6TWVJiX',
-        data-image='/img/stripe.png',
-        data-name='Civic 311',
-        data-description='Donation',
-        data-amount='3000')
+      form#donate(action='/reports/donate/' + report._id, method='post')
+        input(type='hidden', name="amount", value="#")
+        script(class='stripe-button',
+          data-key='pk_test_OQsSptYh5O6y7yY7Q6TWVJiX',
+          data-image='/img/stripe.png',
+          data-name='Civic 311',
+          data-description='Donation',
+          data-amount='3000')
 
   if currentEmployee
     form(action='/reports/' + report._id, method='post')
@@ -44,3 +48,11 @@ block content
       label Status
       textarea(name='currentStatus', required)
       button.alert.small.radius Submit Status Update
+
+    form(action='/reports/donatable/' + report._id, method='post')
+      label Allow Donations?
+      br
+      input(type="checkbox", name="donatable", checked=(true===false ? "checked" : undefined))
+      &nbsp;
+      &nbsp;
+      button.alert.small.radius Open Report to Donations
