--- a/app/views/reports/donations.jade
+++ b/app/views/reports/donations.jade
@@ -9,12 +9,17 @@ block content
 
     h4#h4 <i class='fa fa-flag'></i>&nbsp; Report Name
       p#p= report.name
-    h4#h4 <i class='fa fa-calendar'></i>&nbsp; Date
-      p#p= moment(report.date).format('MMMM Do, YYYY')
     h4#h4 <i class='fa fa-warning'></i>&nbsp; Details
       p#p= report.description
     h4#h4 <i class='fa fa-map-marker'></i>&nbsp; Address
       p#p= report.address
     h4#h4 <i class='fa fa-comment-o'></i>&nbsp; Status
       p#p= report.currentStatus
+    h4#h4 <i class='fa fa-usd'></i>&nbsp; Current Donations
+      p#p= report.amount
+
+      for donor in report.donors
+        h4#h4 <i class='fa fa-usd'></i>&nbsp; Donor Name 
+          p#p= donor.donorName
+
 
