work more on donor page UI

--- a/app/less/app.less
+++ b/app/less/app.less
@@ -160,3 +160,9 @@ i {
 .dropzone-previews {
   height: 100px;
 }
+
+////////// DONATIONS //////////
+.report-donations {
+  border: 4px solid #008cba;
+  padding: 10px;
+}
