--- a/app/views/reports/donations.jade
+++ b/app/views/reports/donations.jade
@@ -4,22 +4,26 @@ block content
   h1= title
 
   for report in reports
-    if report.photo
-      .report-img(style='background-image:url("' + report.photo + '")')
 
-    h4#h4 <i class='fa fa-flag'></i>&nbsp; Report Name
-      p#p= report.name
-    h4#h4 <i class='fa fa-warning'></i>&nbsp; Details
-      p#p= report.description
-    h4#h4 <i class='fa fa-map-marker'></i>&nbsp; Address
-      p#p= report.address
-    h4#h4 <i class='fa fa-comment-o'></i>&nbsp; Status
-      p#p= report.currentStatus
-    h4#h4 <i class='fa fa-usd'></i>&nbsp; Current Donations
-      p#p= report.amount
+    .report-donations
+      h2#h4 <i class='fa fa-flag'></i>
+        &nbsp; 
+        span= report.name
+      h4 Current Donations
+        p#p 
+          span $
+          &nbsp;
+          span= report.amount
 
-      for donor in report.donors
-        h4#h4 <i class='fa fa-usd'></i>&nbsp; Donor Name 
-          p#p= donor.donorName
+      h4 Donors 
+        for donor in report.donors
+          ul
+            li#email= donor.donorEmail
+            .gravatar-img
+            li= donor.donorName
 
+block scripts
+  script(src='/js/vendor/md5.js')
+  script(src='/js/vendor/jquery.gravatar.js')
+  script(src='/js/source/donate.js')
 
