--- a/app/views/reports/fresh.jade
+++ b/app/views/reports/fresh.jade
@@ -20,7 +20,7 @@ block content
     br
     label Picture
     input#dropzone-input(type='file', name='cover')
-    .dropzone.dropzone-previews#my-awesome-dropzone
+    //.dropzone.dropzone-previews#my-awesome-dropzone
     input(type='hidden', name='residentId')
     br
     button.small.radius#create Submit Report
