--- a/app/views/shared/template.jade
+++ b/app/views/shared/template.jade
@@ -52,6 +52,8 @@ html(class='no-js', lang='en')
     script(src='/js/vendor/foundation.min.js')
     script(src='/js/vendor/lodash.js')
     script(src='/js/vendor/moment.js')
+    //script(src='/js/vendor/md5.js')
+    //script(src='/js/vendor/jquery.gravatar.js')
     script(src='/js/source/main.js')
     script(src='https://maps.googleapis.com/maps/api/js?key=AIzaSyAg7BExWsO3xkC80yWGVtWKCrA_eFr-M34&sensor=true&libraries=places')
     script(src='/js/vendor/jquery.geocomplete.min.js')
