--- a/app/views/home/index.jade
+++ b/app/views/home/index.jade
@@ -8,7 +8,7 @@ block content
       #status
         .panel#home-panel
           .small-10.columns
-            label What's my Status?
+            label#label What's my Status?
             input(type='text', placeholder='Report Id')#id-val
           .small-2.columns
             button.medium.radius#id-status Submit
