--- a/app/less/app.less
+++ b/app/less/app.less
@@ -7,6 +7,10 @@ body{
   font-family: 'Lato', sans-serif !important;
 }
 
+#main {
+  margin-bottom: 100px;
+}
+
 ////////// FONTS //////////
 h1, h3,  h4, p, button, a, span{
   font-family: 'Lato', sans-serif !important;
@@ -15,7 +19,7 @@ h1, h3,  h4, p, button, a, span{
 .top-bar{
   background: #3498db !important;
   padding-bottom: 2px solid #3498db !important;
-  margin-bottom: 50px;
+  margin-bottom: 50px !important;
 }
 
 .top-bar-section li:not(.has-form) a:not(.button) {
@@ -191,7 +195,7 @@ i {
   border-top: 35px solid #80B929;
   border-radius: 15px;
   padding: 25px;
-  background: #7f8c8d;
+  background: #2c3e50;
   margin-bottom: 55px;
   /*
   background-image: -webkit-gradient(
@@ -212,6 +216,15 @@ i {
 .report-donations span {
   font-family: 'Varela Round', sans-serif !important;
   color: #ecf0f1;
+}
+
+.report-donations span a {
+  font-family: 'Varela Round', sans-serif !important;
+  color: #80B929;;
+}
+
+.report-donations span a:hover {
+  color: #fff;
 }
 
 .gravatar-img {
@@ -260,6 +273,7 @@ h2 {
   bottom: 0;
   padding: 75px 0;
   text-align: center;
+  margin-top: 70px;
 }
 
 #footer-panel li {
