--- a/app/views/shared/template.jade
+++ b/app/views/shared/template.jade
@@ -12,38 +12,47 @@ html(class='no-js', lang='en')
     link(href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet")
     script(src='/js/vendor/modernizr.js')
   body
-    nav.top-bar
-      ul.title-area
-        li.name
-          h1: a(href="/") Civic 311
-        li.toggle-topbar.menu-icon
-          a(href="#") Menu
+    .sticky.fixed
+      nav.top-bar
+        ul.title-area
+          li.name
+            h1: a(href="/") Civic 311
+          li.toggle-topbar.menu-icon
+            a(href="#") Menu
 
-      section.top-bar-section
-        ul.left
-        ul.right
-          li: a(href="/") Home
-          li.divider
-          li: a(href="/reports") Reports
-          li.divider
-          li: a(href="/reports/new") Submit Report
-          li.divider
-          li: a(href="/register") Register
-          li.divider
-          li: a(href="/login") Login
-          li.divider
-          li.has-form: a(href='/auth/facebook').button.radius.navbtn#fb Facebook Login
-          if currentResident 
-            li.divider
-            li.has-form
-              form(action='/logout'  method='POST' )
-                button.tiny.radius.space.navbtn Logout
-          if currentEmployee
-            li.divider
-            li.has-form
-              form(action='/admin/logout'  method='POST' )
-                button.tiny.radius.space.navbtn Logout
+        section.top-bar-section
+          ul.left
+          ul.right
+            if currentResident || currentEmployee 
+              li: a(href="/reports") Reports
+              li.divider
+            if currentResident
+              li: a(href="/reports/new") Submit Report
+              li.divider
+            if currentResident || currentEmployee
+              li: a(href="/reports/donations") Donations
+              li.divider
+            if !currentResident && !currentEmployee 
+              li: a(href="/register") Register
+              li.divider
+            if !currentResident && !currentEmployee 
+              li: a(href="/login") Login
+              li.divider
+            if !currentResident && !currentEmployee 
+              li.has-form: a(href='/auth/facebook').button.radius.navbtn#fb Facebook Login
+            if currentResident  
+              li.divider
+              li.has-form
+                form(action='/logout'  method='POST' )
+                  button.tiny.radius.space.navbtn Logout
+            if currentEmployee
+              li.divider
+              li.has-form
+                form(action='/admin/logout'  method='POST' )
+                  button.tiny.radius.space.navbtn Logout
 
+    .row#main
+      .small-12.columns
     .row
       .small-12.columns
         block content
@@ -58,6 +67,7 @@ html(class='no-js', lang='en')
 
     script(src='/js/vendor/jquery.js')
     script(src='/js/vendor/foundation.min.js')
+    script(src='/js/vendor/foundation.topbar.js')
     script(src='/js/vendor/lodash.js')
     script(src='/js/vendor/moment.js')
     //script(src='/js/vendor/md5.js')
